# ezno

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  bacon.toml  demo.ts  rustfmt.toml
checker/: Cargo.toml  README.md
checker/binary-serialize-derive/: Cargo.toml  macro.rs
checker/definitions/: full.d.ts  internal-full.d.ts  internal.d.ts  overrides.d.ts  simple.d.ts
checker/docs/: architecture tricks.md  checking.md  events.md  getting-started.md  inference-map.canvas  inference.md  not-supported.md  parameters.md  subtyping.md  types.md  typescript.md
checker/documentation/: architecture-tricks.md  checking.md  events.md  functions.md  getting-started.md  hard-problems.md  inference.md  parameters.md  types.md  typescript.md
checker/examples/: cache.rs  calculate_subtypes.rs  check.rs  generate_cache.rs  run-checker.rs  run_checker.rs  runner.rs  subtyping.rs
checker/fuzz/: Cargo.toml
checker/fuzz/fuzz_targets/: check_project_naive.rs
checker/specification/: Cargo.toml  README.md  amalgamate.rs  build.rs  not_yet_implemented.md  specification.md  specification_old.md  staging.md  test.rs  to_implement.md
checker/src/: api.rs  caching.rs  diagnostics.rs  errors.rs  files.rs  lib.rs  options.rs  range_map.rs  serialization.rs  settings.rs  temp.rs  type_mappings.rs  utilities.rs  utils.rs
checker/src/behavior/: assignments.rs  constant_functions.rs  functions.rs  iteration.rs  loops.rs  mod.rs  modules.rs  objects.rs  operations.rs  template_literal.rs  variables.rs
checker/src/context/: bases.rs  calling.rs  environment.rs  facts.rs  information.rs  invocation.rs  mod.rs  root.rs  store.rs
checker/src/events/: application.rs  function_calling.rs  helpers.rs  mod.rs  printing.rs
checker/src/features/: assignments.rs  conditional.rs  constant_functions.rs  exceptions.rs  functions.rs  iteration.rs  mod.rs  modules.rs  narrowing.rs  objects.rs  operations.rs  regexp.rs  template_literal.rs  variables.rs
checker/src/features/operations/: equality.rs  logical.rs  mathematical_bitwise.rs  mod.rs  relation.rs  unary.rs
checker/src/structures/: README.md  functions.rs  jsx.rs  mod.rs  modules.rs  objects.rs  operators.rs  parameters.rs  proxy.rs  variables.rs
checker/src/synthesis/: README.md  assignments.rs  block.rs  classes.rs  declarations.rs  definitions.rs  expressions.rs  functions.rs  hoisting.rs  interactive.rs  interfaces.rs  mod.rs  module.rs  object_literal.rs  statements.rs  statements_and_declarations.rs  type_annotations.rs  type_references.rs  types.rs  variables.rs
checker/src/synthesis/extensions/: is_expression.rs  jsx.rs  mod.rs
checker/src/types/: calling.rs  casts.rs  classes.rs  disjoint.rs  functions.rs  helpers.rs  indexing.rs  inference.rs  intrinsics.rs  logical.rs  mod.rs  operations.rs  others.rs  printing.rs  properties.rs  regexp.rs  store.rs  subtyping.rs  terms.rs
checker/src/types/generics/: chain.rs  contributions.rs  generic_type_arguments.rs  generic_type_parameters.rs  mod.rs  substitution.rs
checker/src/types/poly_types/: contributions.rs  mod.rs  specialization.rs  substitution.rs
checker/src/types/poly_types/generics/: generic_structure.rs  generic_type_arguments.rs  mod.rs  (+2 more)
checker/src/types/properties/: access.rs  assignment.rs  list.rs  mod.rs
checker/src/utilities/: accumulator.rs  cow_box.rs  debugging.rs  float_range.rs  map.rs  mod.rs  modulo_class.rs  range_map.rs  serialization.rs
checker/tests/: partial_source.rs  specification.rs  suggestions.rs  type_mappings.rs
parser/: Cargo.toml  README.md  examples.md
parser/examples/: chain.rs  code_blocks_to_script.rs  combine_blocks.rs  depth.rs  duplicate_block.rs  expressions.rs  extractor.rs  functions.rs  jsx.rs  lex.rs  lexing.rs  new.rs  parse.rs  pretty_printing.rs  self_tokenization.rs  simple.rs  statement.rs  type_references.rs
parser/fuzz/: Cargo.toml  README.md  build.rs  rustfmt.toml
parser/fuzz/fuzz_targets/: module_roundtrip_naive.rs  module_roundtrip_structured.rs  statements.rs  structured.rs
parser/generator/: Cargo.toml  README.md  generator.rs
parser/generator/examples/: example1.rs  example2.rs  interpolation.rs
parser/generator/tests/: structures.rs
parser/src/: block.rs  comments.rs  cursor.rs  errors.rs  extractor.rs  functions.rs  generator_helpers.rs  lexer.rs  lib.rs  marker.rs  modules.rs  number.rs  operators.rs  options.rs  parameters.rs  property_key.rs  strings.rs  tokens.rs  variable_fields.rs  visiting.rs
parser/src/declarations/: export.rs  import.rs  mod.rs  variable.rs
parser/src/declarations/classes/: class_member.rs  mod.rs
parser/src/declarations/import_export/: export.rs  import.rs  mod.rs
parser/src/expressions/: arrow_function.rs  assignments.rs  mod.rs  new.rs  object_literal.rs  operators.rs  template_literal.rs
parser/src/extensions/: custom_blocks.rs  decorators.rs  is_expression.rs  jsx.rs  mod.rs
parser/src/functions/: mod.rs  parameters.rs
parser/src/statements/: export.rs  for_statement.rs  if_statement.rs  import.rs  interface.rs  mod.rs  switch_statement.rs  try_catch_statement.rs  types.rs  variable.rs  while_statement.rs
parser/src/statements/classes/: mod.rs
parser/src/statements_and_declarations/: mod.rs  using.rs  variable.rs  variables.rs  with.rs  with_statement.rs
parser/src/statements_and_declarations/classes/: class_member.rs  mod.rs
parser/src/statements_and_declarations/control_flow/: for_statement.rs  if_statement.rs  mod.rs  switch_statement.rs  try_catch_statement.rs  while_statement.rs
parser/src/statements_and_declarations/import_export/: export.rs  import.rs  mod.rs
parser/src/types/: declare_variable.rs  declares.rs  enum_declaration.rs  interface.rs  mod.rs  namespace.rs  type_alias.rs  type_annotations.rs  type_declarations.rs  type_references.rs
parser/tests/: comments.rs  cursors.rs  expressions.rs  partial.rs  statements.rs  statements_and_declarations.rs  try_catch.rs  type_annotations.rs  visiting.rs
parser/visitable-derive/: Cargo.toml  README.md  macro.rs
src/: build.rs  (+13 more)
test262/: Cargo.toml  run.sh  runner.rs
(+233 files in other folders)
