[workspace]
members = [
  "parser",
  "parser/visitable-derive",
  "parser/generator",
  "checker",
  "checker/binary-serialize-derive",
  "checker/specification",
  # "lsp/server",
]


[package]
name = "ezno"
description = "A JavaScript type checker and compiler. For use as a library or through the CLI"
authors = ["Ben <kaleidawave@gmail.com>"]
version = "0.0.19"
edition = "2021"
license = "MIT"
homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
repository = "https://github.com/kaleidawave/ezno"
default-run = "ezno"
categories = ["compilers"]
keywords = ["javascript", "typescript", "type-checker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ezno_lib"
path = "src/lib.rs"
# cdylib is for WASM
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ezno"
path = "src/main.rs"

[dependencies]
# ezno-web-framework = { path = "./plugins/web" }

console = "0.15"
codespan-reporting = "0.11"
argh = "0.1"
base64 = "0.21"
enum-variants-strings = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.checker]
path = "./checker"
version = "0.0.14"
features = ["ezno-parser", "serde-serialize"]
package = "ezno-checker"

[dependencies.parser]
path = "./parser"
version = "0.1.3"
features = ["extras"]
package = "ezno-parser"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "=0.2.89"
wasm-bindgen-derive = "0.2.1"
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
tsify = "0.4.5"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
multiline-term-input = "0.1.0"
notify = "6.1.0"


[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
default_trait_access = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
implicit_hasher = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
new_without_default = "allow"
result_unit_err = "allow"
