[package]
name = "ezno-checker"
description = "A fast and correct TypeScript type checker with additional experiments"
version = "0.0.18"
license = "MIT"
repository = "https://github.com/kaleidawave/ezno"
homepage = "https://kaleidawave.github.io/posts/introducing-ezno"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2021"
categories = ["compilers"]
keywords = [
	"javascript",
	"typechecker",
	"checker",
	"typescript",
	"types"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
default = ["ezno-parser"]
ezno-parser = ["dep:parser"]
serde-serialize = ["dep:serde"]

[dependencies]
source-map = { version = "0.15", features = ["serde-serialize", "self-rust-tokenize"] }
binary-serialize-derive = { path = "./binary-serialize-derive", version = "0.0.3" }
temporary-annex = "0.1"
derive-enum-from-into = "0.2"
derive-debug-extras = { version = "0.3", features = ["auto-debug-single-tuple-inline"] }
enum-variants-strings = "0.3"
iterator-endiate = "0.2"
path-absolutize = { version = "3.0", features = ["use_unix_paths_on_wasm"] }
either = "1.6"
levenshtein = "1"
regress = { version = "0.10", features = ["utf16"] }
serde = { version = "1.0", features = ["derive"], optional = true }
simple-json-parser = "0.0"

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = "0.4"
wasm-bindgen = "0.2"

[dependencies.parser]
path = "../parser"
optional = true
version = "0.1.7"
features = ["extras"]
package = "ezno-parser"

[dev-dependencies]
match_deref = "0.1.1"
