[package]
name = "ezno-parser"
description = "Parser and AST definitions for Ezno"
authors = ["Ben <kaleidawave@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/ezno"
homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO these shouldn't be default
default = [
  "self-rust-tokenize",
  "extras",
  "codespan-reporting",
  "serde-serialize",
]
self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
codespan-reporting = ["source-map/codespan-reporting"]
serde-serialize = ["dep:serde"]
extras = []

[dependencies]
visitable-derive = { path = "./visitable-derive", version = "0.0.3", package = "ezno-parser-visitable-derive" }

derive-finite-automaton = "0.1.3"
derive-debug-extras = { version = "0.2.2", features = [
  "auto-debug-single-tuple-inline",
] }
derive-partial-eq-extras = "0.1.2"
derive-enum-from-into = "0.1.1"

temporary-annex = "0.1.0"
iterator-endiate = "0.2.1"

enum_variant_type = "0.3.1"
enum-variants-strings = "0.2"

get-field-by-type = "0.0.3"

serde = { version = "1.0", features = ["derive"], optional = true }
self-rust-tokenize = { version = "0.3.3", optional = true }

source-map = { version = "0.14.7", features = [
  "serde-serialize",
  "self-rust-tokenize",
] }

# Needs buffered and not parralel for WASM
[target.'cfg(target_family = "wasm")'.dependencies]
tokenizer-lib = { version = "1.5.1", features = [
  "buffered",
  "sized-tokens",
], default_features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokenizer-lib = { version = "1.5.1", features = [
  "parallel",
  "sized-tokens",
], default_features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
match_deref = "0.1.1"
