[package]
name = "ezno-parser"
description = "Parser and AST definitions for Ezno"
authors = ["Ben <kaleidawave@gmail.com>"]
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/ezno"
homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
categories = ["parser-implementations"]
keywords = [
	"javascript",
	"parser",
	"ast",
	"compiler",
	"visitor"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
# TODO some of these shouldn't be default
default = [
	"self-rust-tokenize",
	"extras",
	"codespan-reporting",
	"serde-serialize",
	"full-typescript"
]
self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
codespan-reporting = ["source-map/codespan-reporting"]
serde-serialize = ["dep:serde"]
extras = []

# Some additional syntax (that I don't think should exist 😂)
full-typescript = []

[dependencies]
visitable-derive = { path = "./visitable-derive", version = "0.0.9", package = "ezno-parser-visitable-derive" }
derive-finite-automaton = "0.2"
derive-debug-extras = { version = "0.3", features = ["auto-debug-single-tuple-inline"] }
derive-partial-eq-extras = "0.2"
derive-enum-from-into = "0.2"
temporary-annex = "0.1.0"
iterator-endiate = "0.2"
enum-variants-strings = "0.3"
get-field-by-type = "0"
macro_rules_attribute = { version = "0.2.0" }
serde = { version = "1.0", features = ["derive"], optional = true }
self-rust-tokenize = { version = "0.3", optional = true }
source-map = { version = "0.15", features = ["serde-serialize", "self-rust-tokenize"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
match_deref = "0.1.1"
