[package]
name = "binary-serialize-derive"
description = "A small representation for objects in the Ezno checker, used for caching to make checking faster"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/ezno"
homepage = "https://kaleidawave.github.io/posts/introducing-ezno"
authors = ["Ben <kaleidawave@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-helpers = "0.4.2"

[lib]
path = "macro.rs"
proc_macro = true
