[package]
name = "ezno-checker-specification"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["base"]
base = []
staging = []
to_implement = []
all = ["base", "staging", "to_implement"]

[[test]]
name = "specification_test"
path = "test.rs"

[dependencies]
checker = { path = "..", version = "*", package = "ezno-checker", features = [
  "ezno-parser",
] }
parser = { path = "../../parser", version = "*", package = "ezno-parser" }
pretty_assertions = "1.3.0"

[[example]]
name = "amalgamate"
path = "./amalgamate.rs"

# For amalgamate
[dev-dependencies]
simple-markdown-parser = { version = "0.0" }

[build-dependencies]
simple-markdown-parser = { version = "0.0" }
