[package]
name = "ezno-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[build-dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }

[dependencies]
boa_ast = { git = "https://github.com/boa-dev/boa.git", features = [
  "arbitrary",
] }
boa_interner = { git = "https://github.com/boa-dev/boa.git", features = [
  "arbitrary",
] }
libfuzzer-sys = "0.4"
pretty_assertions = "1.3.0"

[dependencies.ezno-parser]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "module_roundtrip_naive"
path = "fuzz_targets/module_roundtrip_naive.rs"
test = false
doc = false

[[bin]]
name = "module_roundtrip_structured"
path = "fuzz_targets/module_roundtrip_structured.rs"
test = false
doc = false
