[package]
name = "ezno-ast-generator"
description = "Quasi-quoted constant compiled TS definitions for Ezno AST"
authors = ["Ben <kaleidawave@gmail.com>"]
version = "0.0.15"
edition = "2021"
license = "MIT"
repository = "https://github.com/kaleidawave/ezno"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "generator.rs"
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
self-rust-tokenize = "0.3"
ezno-parser = { path = "..", version = "0.1.7", features = [
  "self-rust-tokenize",
] }

[dev-dependencies]
pretty_assertions = "1.3"
